my-titanic-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-service
spec:
  selector:
    app: my-titanic-chart
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
