my-titanic-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-titanic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: titanic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titanic-service
                port:
                  number: 8080
